# cat-feeder

./: .clang-format  .gitmodules  CMakeLists.txt  config.json  main.c
cmake/modules/: feeder.cmake
include/feeder/: feed-manager.h  feeder.h
src/: feed-manager.c  feeder.c
src/json/: cJSON.c  cJSON.h  json.h
